# minercaft_fabric_waylandcraft_mods

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  README_EN.md  README_JA.md  README_ZH.md  build.gradle  gradle.properties
native/: Cargo.toml
native/bridge/: Cargo.toml
native/bridge/src/: lib.rs
native/lib/src/: lib.rs
native/src/: bridge.rs  ddm.rs  desktop_windows.rs  lib.rs  portal_capture.rs  process.rs  seat.rs  xdg_spec.rs
scripts/: wlc-capture.py
src/client/java/dev/evvie/: WaylandCraftClient.java
src/client/java/dev/evvie/mixin/client/: ExampleClientMixin.java
src/client/resources/: wayland-craft.client.mixins.json
src/main/java/dev/evvie/: WaylandCraft.java
src/main/java/dev/evvie/mixin/: ExampleMixin.java
src/main/java/dev/evvie/waylandcraft/: BufferTexture.java  RenderUtils.java  WaylandCraft.java  WaylandCraftCommon.java  Window.java  WindowDisplay.java  WindowFramebuffer.java
src/main/java/dev/evvie/waylandcraft/bridge/: WLCAbstractWindow.java  WLCSurface.java  WLCToplevel.java  WaylandCraftBridge.java
src/main/java/dev/evvie/waylandcraft/command/: PermissionCommand.java  WaylandCraftCommand.java
src/main/java/dev/evvie/waylandcraft/desktop/: DesktopEntry.java  DesktopIcon.java  XDGDesktopManager.java
src/main/java/dev/evvie/waylandcraft/grabs/: DNDGrab.java  WindowGrab.java
src/main/java/dev/evvie/waylandcraft/gui/: AppLauncherScreen.java  SharedWindowManagerScreen.java  WindowManagerScreen.java
src/main/resources/: fabric.mod.json  wayland-craft.mixins.json  waylandcraft.mixins.json
(+40 files in other folders)
