[package]
name = "waylandcraft"
version = "0.1.0"
edition = "2024"

[lib]
name = "waylandcraft"
crate-type = [ "cdylib" ]

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay.git", rev = "89e58f7", default-features = false, features = [ "wayland_frontend", "backend_drm" ] }
jni = "0.22.4"
libc = { version = "0.2.176", default-features = false }
xkbcommon = "0.8.0"
cosmic-freedesktop-icons = { git = "https://github.com/pop-os/freedesktop-icons.git", rev = "7a61a70" }
freedesktop-desktop-entry = "0.8.1"
resvg = { version = "0.47.0", default-features = false, features = ["text", "memmap-fonts"] }
shlex = "1.3.0"
thiserror = "2.0"
# PipeWire capture via XDG Desktop Portal
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }
pipewire = "0.8"
# Wayland client for wlr-foreign-toplevel-management
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[profile.release]
opt-level = "z"      # optimize for size
lto = true           # link-time optimization
codegen-units = 1    # single codegen unit (better optimization)
strip = true         # strip debug symbols
panic = "abort"      # smaller binary
